--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -11,11 +11,16 @@
 <div th:replace="layouts/header :: header"></div>
 <main class="container">
     <div sec:authorize="hasAuthority('ADMIN')">
-        <h1>Все пользователи</h1>
         <div class="block-admin" th:each="user : ${users}">
            <h1>Пользователь: <span th:text="${user.username}"></span></h1><br>
             <h3>Роль на сайте: <span th:text="${user.roles[0]} "></span></h3>
             <h3>Email: <span th:text="${user.email}"></span></h3><br>
+<!--            Добавить реализацию-->
+<!--            <select name="roles">-->
+<!--                <option value="USER">ПОЛЬЗОВАТЕЛЬ</option>-->
+<!--                <option value="ADMIN">АДМИНИСТРАТОР</option>-->
+<!--                <option value="REDACTOR">РЕДАКТОР</option>-->
+<!--            </select>-->
             <a th:href="@{/admin/user-} + ${user.id}">Асаны пользователя</a>
         </div>
     </div>
