--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <body>
     <div th:replace="layouts/header :: header"></div>
     <div class="presentation">
-        <img src="https://cdn1.iconfinder.com/data/icons/dompicon-glyph-fitness-diet/256/meditation-yoga-retreat-fitness-diet-512.png">
+        <img th:src="@{/icon/logo.png}">
         <h2>Составь свою последовательность</h2>
         <p>Составь свою последовательность</p>
     </div>
