--- a/src/main/resources/templates/add-asana.html
+++ b/src/main/resources/templates/add-asana.html
@@ -16,6 +16,8 @@
         <input type="text" name="title" placeholder="Введите название Ассаны">
         <input type="url" name="image" placeholder="Введите URL Asana">
         <textarea name="info" placeholder="Введите описание"></textarea>
+        <textarea name="positiveEffects" placeholder="Введите положительные эффекты"></textarea>
+        <textarea name="negativeEffects" placeholder="Введите отрицательные эффекты"></textarea>
         <textarea name="fullInfo" placeholder="Введите полное описание"></textarea><br>
         <div class="error" th:text="${error}"></div>
         <button class="button" type="submit">Добавить</button>
