--- a/src/main/resources/templates/show-asana.html
+++ b/src/main/resources/templates/show-asana.html
@@ -13,7 +13,8 @@
     <div>
       <img th:src="${asana.image}" th:alt="${asana.title}"/>
       <h3 th:text="${asana.title}"></h3>
-      <h4 th:text="${asana.info}"></h4>
+      <h5> Эффекты: <h4 th:text="${asana.positiveEffects}"></h4></h5>
+      <h6> Противопоказания: <h4 th:text="${asana.negativeEffects}"></h4></h6>
       <p th:text="${asana.fullInfo}"></p>
       <h2>Автор: <b th:text="${asana.user.username}"></b></h2>
     </div>
