--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -4,14 +4,31 @@
     <meta charset="UTF-8">
     <title>Страница о нас</title>
     <link rel="stylesheet" th:href="@{/styles/main.css}">
-
 </head>
+
 <body>
 <div th:replace="layouts/header :: header"></div>
 
 <main class="container">
-    <div class="block">
-        <h1>о нас</h1>
+    <div class="block-about-us">
+        <p>   Привет, коллега! )) Меня зовут Лакиенко Анна - Я преподаватель хатха-йоги. Вспоминаю, как тяжело, поначалу, составлять занятие для учеников.
+            Я всегда усердно готовилась перед классом йоги, учила названия асан, расписывала последовательность на листе или держала в голове,
+            в общем стресс немного присутствовал)) и это не говоря о волнении или других факторах, когда ты работаешь с людьми. Для упрощения нашей
+            работы мы с мужем создали этот сайт, где вы без труда сможете выстроить асаны в том порядке, который нужен Вам, в соответствии с темой занятия.
+            Радуйте ваших учеников новым комплексом!
+            Желаю хорошей практики!
+            </p><br>
+        <p>Наш проект находиться на ранней стадии и будет еще дорабатываться, frontend и backend написаны мной, дизайн помогла моя жены.
+            По все интересующим вопросам можно писать нам на почту, жалобы, предложения, возможные ошибки и неточности так же приветствуются.
+        </p><br>
+        <p>Информация и фото асан взяты с сайта.
+            <a href="https://www.oum.ru">oum.ru</a>
+            </p><br>
+        <p>
+        <h1>Игорь Лакиенко</h1> <p>lakienko.igor@yandex.ru</p><br>
+        <h1>Анна Лакиенко</h1> <p>pantukhina.anna@yandex.ru</p>
+        <p>Instagram - @laki_yoga_art</p>
+        </p>
     </div>
 </main>
 
