--- a/src/main/resources/templates/cart-asanas.html
+++ b/src/main/resources/templates/cart-asanas.html
@@ -36,7 +36,7 @@
      <h4>У вас пока еще нет асан</h4>
    </div>
 </main>
-<div th:replace="layouts/footer :: footer"></div>
+<!--<div th:replace="layouts/footer :: footer"></div>-->
 
 
 </body>
