--- a/src/main/resources/templates/layouts/footer.html
+++ b/src/main/resources/templates/layouts/footer.html
@@ -1,2 +1,2 @@
 <footer xmlns:th="http://www.thymeleaf.org" th:fragment="footer">
-    All under protection</footer>
+    Version of the project - 0.1:  Data 21.12.2022</footer>
