--- a/src/main/resources/templates/reg.html
+++ b/src/main/resources/templates/reg.html
@@ -21,7 +21,7 @@
     </form>
 
 </main>
-<div th:replace="layouts/footer :: footer"></div>
+<!--<div th:replace="layouts/footer :: footer"></div>-->
 
 
 </body>
