--- a/src/main/resources/templates/show-asana.html
+++ b/src/main/resources/templates/show-asana.html
@@ -15,7 +15,7 @@
       <h3 th:text="${asana.title}"></h3>
       <h5> Эффекты: <h4 th:text="${asana.positiveEffects}"></h4></h5>
       <h6> Противопоказания: <h4 th:text="${asana.negativeEffects}"></h4></h6>
-      <p th:text="${asana.fullInfo}"></p>
+<!--      <p th:text="${asana.fullInfo}"></p>-->
       <h2>Автор: <b th:text="${asana.user.username}"></b></h2>
     </div>
   </div>
