--- a/src/main/resources/templates/asana-update.html
+++ b/src/main/resources/templates/asana-update.html
@@ -24,7 +24,7 @@
     </form>
 
 </main>
-<div th:replace="layouts/footer :: footer"></div>
+<!--<div th:replace="layouts/footer :: footer"></div>-->
 
 </body>
 </html>
