--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -21,7 +21,7 @@
     <p>нажмите на котика, чтобы вернуться на главную страницу</p>
   </div>
 </main>
-<div th:replace="layouts/footer :: footer"></div>
+<!--<div th:replace="layouts/footer :: footer"></div>-->
 
 
 </body>
