--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,7 +19,7 @@
     </form>
 
 </main>
-<div th:replace="layouts/footer :: footer"></div>
+<!--<div th:replace="layouts/footer :: footer"></div>-->
 
 
 </body>
