--- a/src/main/resources/templates/user-asanas.html
+++ b/src/main/resources/templates/user-asanas.html
@@ -28,7 +28,7 @@
 
 
 </main>
-<div th:replace="layouts/footer :: footer"></div>
+<!--<div th:replace="layouts/footer :: footer"></div>-->
 
 
 </body>
