--- a/src/main/resources/templates/user-comment.html
+++ b/src/main/resources/templates/user-comment.html
@@ -20,7 +20,7 @@
 
 
 </main>
-<div th:replace="layouts/footer :: footer"></div>
+<!--<div th:replace="layouts/footer :: footer"></div>-->
 
 
 </body>
