--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -26,7 +26,7 @@
         <button class="button" type="submit">Выйти</button>
     </form>
 </main>
-<div th:replace="layouts/footer :: footer"></div>
+<!--<div th:replace="layouts/footer :: footer"></div>-->
 
 
 </body>
