It's last adding this years and this version. Fixing small mistakes.

--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -18,8 +18,9 @@
             Радуйте ваших учеников новым комплексом!
             Желаю хорошей практики!
             </p><br>
-        <p>Наш проект находиться на ранней стадии и будет еще дорабатываться, frontend и backend написаны мной, дизайн помогла моя жены.
-            По все интересующим вопросам можно писать нам на почту, жалобы, предложения, возможные ошибки и неточности так же приветствуются.
+        <p> Привет, меня зовут Лакиенко Игорь, благодаря идее моей жены получилось реализовать этот интересный проект. Наш проект находиться ещё на ранней
+            стадии и будет со временем дорабатываться, frontend и backend написаны мной, с дизайном помогла моя жена.
+            По все интересующим вопросам можно писать на почту, жалобы, предложения, возможные ошибки и неточности так же приветствуются.
         </p><br>
         <p>Информация и фото асан взяты с сайта.
             <a href="https://www.oum.ru">oum.ru</a>
