deploying my project to VPS, adding favicon for my page and setting up my project on server.

--- a/src/main/resources/templates/add-asana.html
+++ b/src/main/resources/templates/add-asana.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Добавить Асану</title>
+    <div th:replace="layouts/favicon :: favicon"></div>
     <link rel="stylesheet" th:href="@{/styles/main.css}">
 </head>
 <body>
