--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Панель Администратора</title>
+    <div th:replace="layouts/favicon :: favicon"></div>
     <link rel="stylesheet" th:href="@{/styles/main.css}">
 
 </head>
