--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,9 +2,10 @@
 <html lang="en"  xmlns:th="http://www.thymeleaf.org"
       >
 <head>
-  <meta charset="UTF-8">
-  <title>Ошибка 404</title>
-  <link rel="stylesheet" th:href="@{/styles/main.css}">
+    <meta charset="UTF-8">
+    <title>Ошибка 404</title>
+    <div th:replace="layouts/favicon :: favicon"></div>
+    <link rel="stylesheet" th:href="@{/styles/main.css}">
 
 </head>
 <body>
