--- a/src/main/resources/templates/cart-asanas.html
+++ b/src/main/resources/templates/cart-asanas.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Последовательность Асан</title>
+  <div th:replace="layouts/favicon :: favicon"></div>
   <link rel="stylesheet" th:href="@{/styles/main.css}">
 
 </head>
