--- a/src/main/resources/templates/reg.html
+++ b/src/main/resources/templates/reg.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Регистрация</title>
+    <div th:replace="layouts/favicon :: favicon"></div>
     <link rel="stylesheet" th:href="@{/styles/main.css}">
 
 </head>
