--- a/src/main/resources/templates/add-asana.html
+++ b/src/main/resources/templates/add-asana.html
@@ -18,7 +18,7 @@
         <textarea name="info" placeholder="Введите описание"></textarea>
         <textarea name="positiveEffects" placeholder="Введите положительные эффекты"></textarea>
         <textarea name="negativeEffects" placeholder="Введите отрицательные эффекты"></textarea>
-        <textarea name="fullInfo" placeholder="Введите полное описание"></textarea><br>
+<!--        <textarea name="fullInfo" placeholder="Введите полное описание"></textarea><br>-->
         <div class="error" th:text="${error}"></div>
         <button class="button" type="submit">Добавить</button>
     </form>
