--- a/src/main/resources/templates/asana-update.html
+++ b/src/main/resources/templates/asana-update.html
@@ -19,7 +19,7 @@
         <textarea name="info" placeholder="Введите описание" th:text="${asana.info}"></textarea>
         <textarea name="positiveEffects" placeholder="Введите положительные эффекты" th:text="${asana.positiveEffects}"></textarea>
         <textarea name="negativeEffects" placeholder="Введите отрицательные эффекты" th:text="${asana.negativeEffects}"></textarea>
-        <textarea name="fullInfo" placeholder="Введите полное описание" th:text="${asana.fullInfo}"></textarea><br>
+<!--        <textarea name="fullInfo" placeholder="Введите полное описание" th:text="${asana.fullInfo}"></textarea><br>-->
         <div class="error" th:text="${error}"></div>
         <button class="button" type="submit">Редактировать</button>
     </form>
