--- a/src/main/resources/templates/show-asana.html
+++ b/src/main/resources/templates/show-asana.html
@@ -17,7 +17,7 @@
       <h5> Эффекты: <h4 th:text="${asana.positiveEffects}"></h4></h5>
       <h6> Противопоказания: <h4 th:text="${asana.negativeEffects}"></h4></h6>
 <!--      <p th:text="${asana.fullInfo}"></p>-->
-      <h2>Автор: <b th:text="${asana.user.username}"></b></h2>
+<!--      <h2>Автор: <b th:text="${asana.user.username}"></b></h2>-->
     </div>
   </div>
   <div class="showAsana">
